Forenkle output/carryon - bruk heller RuleOutcome